Redesign site layout and add PQC readiness messaging

--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
             <p class="text-sm text-armadilloGray">No jargon. Every recommendation comes with rationale, ownership, and next steps.</p>
           </div>
           <div class="glass-panel rounded-2xl p-6">
-            <h3 class="font-semibold text-armadilloBlack mb-2">Secure by design</h3>
-            <p class="text-sm text-armadilloGray">Documentation, policies, and training built to withstand audits and real-world threats.</p>
+            <h3 class="font-semibold text-armadilloBlack mb-2">Future-ready controls</h3>
+            <p class="text-sm text-armadilloGray">Documentation, controls, and migration plans that include Post-Quantum Cryptography readiness.</p>
           </div>
           <div class="glass-panel rounded-2xl p-6">
             <h3 class="font-semibold text-armadilloBlack mb-2">People-centered</h3>
